# django-currentuser

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  settings.py  setup.py  tox.ini  tox2travis.py
.github/workflows/: tox.yml
django_currentuser/: middleware.py
django_currentuser/db/models/: __init__.py  fields.py
tests/: setup.py
tests/testapp/: models.py  sixmock.py  tests.py  urls.py
tests/testapp/migrations/: 0001_initial.py
