[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-currentuser"
version = "0.6.0"
authors = [
  { name="Peter Zsoldos", email="hello@zsoldosp.eu" },
]
description = "Conveniently store reference to request user on thread/db level."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: BSD License',
        "Operating System :: OS Independent",
        'Natural Language :: English',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Framework :: Django',
        'Framework :: Django :: 3.2',
        'Framework :: Django :: 4',
        'Framework :: Django :: 4.0',
        'Framework :: Django :: 4.1',
        'Framework :: Django :: 4.2',
]

[project.urls]
"Homepage" = "https://github.com/zsoldosp/django-currentuser"
"Bug Tracker" = "https://github.com/zsoldosp/django-currentuser/issues"

