[build-system]
requires = [
  "setuptools>=61.0.0",
  "setuptools-scm[toml]>=5.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "django-currentuser"
version = "0.7.0"
authors = [
  { name="Peter Zsoldos", email="hello@zsoldosp.eu" },
]
maintainers = [
  { name="Peter Zsoldos", email="hello@zsoldosp.eu" },
]
description = "Conveniently store reference to request user on thread/db level."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: BSD License',
        "Operating System :: OS Independent",
        'Natural Language :: English',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Framework :: Django',
        'Framework :: Django :: 3.2',
        'Framework :: Django :: 4.2',
        'Framework :: Django :: 5.0',
]
dependencies = [
  'Django>=3.2, < 5.1, !=4.0, !=4.1'
]

[project.urls]
"Homepage" = "https://github.com/zsoldosp/django-currentuser"
"Bug Tracker" = "https://github.com/zsoldosp/django-currentuser/issues"

[tool.setuptools]
packages = ["django_currentuser"]

