[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm[toml]>=5.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-currentuser"
dynamic = ["version", "readme", "dependencies"]
authors = [{ name = "Peter Zsoldos", email = "hello@zsoldosp.eu" }]
maintainers = [{ name = "Peter Zsoldos", email = "hello@zsoldosp.eu" }]
description = "Conveniently store reference to request user on thread/db level."
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
]

[project.urls]
"Homepage" = "https://github.com/zsoldosp/django-currentuser"
"Bug Tracker" = "https://github.com/zsoldosp/django-currentuser/issues"

[tool.setuptools]
packages = ["django_currentuser"]

[tool.setuptools.dynamic]
version = { attr = "django_currentuser.__version__" }
readme = { file = ["README.rst"] }
